--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -4,11 +4,16 @@ on:
   push:
     branches: [ "master" ]
 
+
 jobs:
   build:
-    runs-on: ubuntu-latest
 
-     steps:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+
+    steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 11
       uses: actions/setup-java@v3
