--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -20,17 +20,6 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
 
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
-
-    - name: Increase Patch version
-      run: |
-        version=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
-        IFS='.' read -r major minor patch <<< "$version"
-        new_patch=$((patch + 1))
-        new_version="$major.$minor.$new_patch"
-        mvn versions:set -DnewVersion=$new_version
-
     - name: Build Docker image
       run: docker build -t simple-java-app:latest .
 
@@ -49,7 +38,7 @@ jobs:
 
   increment_version:
     runs-on: ubuntu-latest
-    needs: build_and_delivery
+    needs: build
     if: ${{ success() }}
     steps:
     - name: version increanent
