--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,8 +1,11 @@
 name: CI/CD Pipeline
 
 on:
-  push:
-    branches: [ "master" ]
+  workflow_run:
+      workflows: ['CodeQL']
+      types: [completed]
+      branches:
+          - 'master'
 
 jobs:
   build:
